components/alerts/alert.css
.alert-success,
.alert-des-success,
.alert-success-btn,
.alert-info,
.alert-des-info,
.alert-info-btn,
.alert-warning,
.alert-des-warning,
.alert-warning-btn,
.alert-error,
.alert-des-error,
.alert-error-btn {
  max-width: 25rem;
  border-radius: 4px;
  margin: 0.6rem;
  padding: 0.6rem 0.6rem 0.6rem 0.8rem;
  display: flex;
  align-items: center;
  position: fixed;
  z-index: 10;
  bottom: 1rem;
  left: 1rem;
}

.alert-for-docs{
  position: relative;
}

.alert-success,
.alert-success-btn,
.alert-info,
.alert-info-btn,
.alert-warning,
.alert-warning-btn,
.alert-error,
.alert-error-btn {
  min-width: 18rem;
  height: auto;
}

.alert-success,
.alert-des-success,
.alert-success-btn {
  background-color: var(--success-bg);
  color: var(--success-text);
  border: 1px solid var(--success-text);
}

.alert-info,
.alert-des-info,
.alert-info-btn {
  background-color: var(--info-bg);
  color: var(--info-text);
  border: 1px solid var(--info-text);
}

.alert-warning,
.alert-des-warning,
.alert-warning-btn {
  background-color: var(--warning-bg);
  color: var(--warning-text);
  border: 1px solid var(--warning-text);
}

.alert-error,
.alert-des-error,
.alert-error-btn {
  background-color: var(--error-bg);
  color: var(--error-text);
  border: 1px solid var(--error-text);
}

.alert-des-success,
.alert-des-info,
.alert-des-warning,
.alert-des-error {
  display: flex;
  align-items: baseline;
  min-width: 17rem;
  height: auto;
}

.alert-des-success h2,
.alert-des-info h2,
.alert-des-warning h2,
.alert-des-error h2 {
  font-size: 1rem;
  font-weight: 500;
}

.alert-des-success p,
.alert-des-info p,
.alert-des-warning p,
.alert-des-error p {
  font-size: 0.9rem;
  font-weight: 400;
  margin: 0.5rem auto 0.3rem;
}

.alert-des-success p a,
.alert-des-info p a,
.alert-des-warning p a,
.alert-des-error p a{
  font-weight: 500;
  margin: 0 0.6rem;
  padding: 0.5rem;
  border-radius: 4px;
}

.alert-des-success p a{
  color: var(--success-text);
}

.alert-des-info p a{
  color: var(--info-text);
}

.alert-des-warning p a{
  color: var(--warning-text);
}

.alert-des-success p a:hover,
.alert-des-info p a:hover,
.alert-des-warning p a:hover,
.alert-des-error p a:hover{
  background-color: var(--btn-hover);
}

.alert-des-error p a{
  color: var(--error-text);
}

.alert-success-btn,
.alert-info-btn,
.alert-warning-btn,
.alert-error-btn {
  display: flex;
  align-content: center;
  justify-content: space-between;
  height: 2.6rem;
}

.alert-success-btn .alert-text,
.alert-info-btn .alert-text,
.alert-warning-btn .alert-text,
.alert-error-btn .alert-text {
  display: flex;
}

.alert-close,
.undo {
  color: var(--text-light);
  cursor: pointer;
}

.alert-close {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  padding: 0.4rem;
}

.undo:hover {
  border-radius: 4px;
}

.alert-close:hover,
.undo:hover {
  color: var(--primary-color);
  background-color: var(--btn-hover);

}

.alert-icon {
  margin-right: 0.6rem;
}

